fix: overflow hidden

--- a/src/components/menu-item/menu-item.styles.scss
+++ b/src/components/menu-item/menu-item.styles.scss
@@ -8,6 +8,7 @@
   border: 1px solid black;
   margin: 0 7.5px 15px;
   border-radius: 2px;
+  overflow: hidden;
 
   &.large {
     height: 380px;
